# terlik

./: LICENSE  Taskfile.yaml  pyproject.toml
terlik/: __init__.py  __main__.py
terlik/containers/: app.py  main.py
terlik/widgets/: terminal.py
